--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <container class="mode-container">
         <div class="mode-selection">
             <input type="radio" id="Input_Trading" name="Choice" value="Trading" class="mode-radio">
-            <label for="Input_Trading" class="mode-label">Trading Mode</label>
+            <label for="Input_Trading" class="mode-label">Trading</label>
 
             <input type="radio" id="Input_Staking" name="Choice" value="Staking" class="mode-radio">
-            <label for="Input_Staking" class="mode-label">Staking Mode</label>
+            <label for="Input_Staking" class="mode-label">Staking</label>
 
             <input type="radio" id="Input_NFT" name="Choice" value="NFT" class="mode-radio">
-            <label for="Input_NFT" class="mode-label">Nft Mode</label>
+            <label for="Input_NFT" class="mode-label">NFT</label>
 
             <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="mode-radio">
-            <label for="Input_Lending" class="mode-label">Lending Mode</label>
+            <label for="Input_Lending" class="mode-label">Lending/Borrowing</label>
         </div>
     </container>
 
@@ -266,13 +266,6 @@
 ##                                                          ##
 ##############################################################
 -->
-        <!-- 
-##############################################################
-##                                                          ##
-##                      Prêt/Emprunt                        ##     
-##                                                          ##
-##############################################################
--->
 
         <container id="PartieLending" class="pret-emprunt-container">
             <div class="pret-emprunt-heading">
@@ -325,12 +318,7 @@
             </section>
         </container>
 
-
-
-
-
         <script type="module" src="main.js"></script>
-
 
 </body>
 
