--- a/index.html
+++ b/index.html
@@ -342,7 +342,10 @@
 
 
         <script type="module" src="main.js"></script>
-        <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
+        <script>
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+        </script>
+        <script defer src="/_vercel/insights/script.js"></script>
 
 </body>
 
