--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
                 </div>
             </form>
 
+            <div class="temps-range-wrapper">
+                <p id="PhraseSelection_Temps" class="temps-input-label">Sélectionnez le temps de la position</p>
+                <input type="range" min="1" max="360" id="Input_RangeTemps" class="temps-range" />
+                <span id="Temps_Value" class="temps-value-display">1 </span>
+            </div>
+
             <div class="staking-input-wrapper">
                 <p id="stakingapymode" class="staking-input-label">Fréquence de capitalisation pour l'APY</p>
                 <select id="Input_CapitalizationFrequency" class="staking-input">
