update DOM.js, APR.js, ResetStaking.js and index.html

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
                 <p id="ResultatCalculStaking" class="staking-result"></p>
                 <p id="WalletBeneficeStaking" class="staking-result"></p>
                 <p id="CommissionStaking" class="staking-result"></p>
-                <p id="TauxAnnuelEffectifDisplay" class="staking-result"></p>
-                <p id="TauxJournalierDisplay" class="staking-result"></p>
+                <p id="TokensParJourDisplay" class="staking-result"></p>
+                <p id="TokensParSemaineDisplay" class="staking-result"></p>
+                <p id="TokensParMoisDisplay" class="staking-result"></p>
                 <p id="TempsPourDoublerDisplay" class="staking-result"></p>
                 <p id="ErrorContainerStaking" class="staking-error"></p>
             </section>
