--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
 
 
         <script type="module" src="main.js"></script>
+        <script>
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+        </script>
+        <script defer src="/_vercel/insights/script.js"></script>
+
 </body>
 
 </html>
