--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
             window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
         </script>
         <script defer src="/_vercel/insights/script.js"></script>
+        <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 
 </body>
 
