update DOM.js, APY.js and index.html

--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
                 <input type="number" min="0" step="0.000001" id="Input_CommisionStaking" class="staking-input">
             </div>
 
+            <div class="stoploss-toggle-wrapper">
+                <input type="checkbox" id="Toggle_AutoCompound" name="Toggle_AutoCompound" class="autocompound-toggle">
+                <label for="Toggle_AutoCompound" id="LabelAutoCompounds" class="autocompounds-toggle-label"></label>
+            </div>
+
             <div class="staking-button-wrapper">
                 <button type="button" id="Button_CalculerLesResultatsStaking" class="staking-button">Effectuer le calcul
                     pour obtenir les résultats</button>
