--- a/index.html
+++ b/index.html
@@ -316,19 +316,16 @@
                 </div>
             </form>
 
-            <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label">Montant :</p>
-                <input type="number" min="0" step="0.000001" id="Input_Montant" class="pret-emprunt-input">
-            </div>
-
-            <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label">Taux d'intérêt (% annuel) :</p>
-                <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="pret-emprunt-input">
-            </div>
-
-            <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label">Durée (en mois) :</p>
-                <input type="number" min="0" id="Input_Duree" class="pret-emprunt-input">
+            <div class="temps-range-wrapper">
+                <p id="PhraseSelection_Temps_Lending" class="temps-input-label">Sélectionnez le temps de la position</p>
+                <div class="temps-buttons-wrapper">
+                    <button class="temps-button-lending" data-days="1">1 Jour</button>
+                    <button class="temps-button-lending" data-days="7">1 Semaine</button>
+                    <button class="temps-button-lending" data-days="182">6 Mois</button>
+                    <button class="temps-button-lending" data-days="365">1 An</button>
+                </div>
+                <input type="range" min="1" max="365" id="Input_RangeTemps_Lending" class="temps-range" />
+                <span id="Temps_Value_Lending" class="temps-value-display">1</span>
             </div>
 
             <div class="pret-emprunt-input-wrapper" id="Wrapper_FrequenceCapitalisation">
@@ -346,6 +343,19 @@
                 <input type="checkbox" id="Input_Recomposition" class="pret-emprunt-checkbox">
                 <label for="Input_Recomposition">Réinvestir les intérêts</label>
             </div>
+
+
+
+            <div class="pret-emprunt-input-wrapper">
+                <p class="pret-emprunt-input-label">Montant :</p>
+                <input type="number" min="0" step="0.000001" id="Input_Montant" class="pret-emprunt-input">
+            </div>
+
+            <div class="pret-emprunt-input-wrapper">
+                <p class="pret-emprunt-input-label">Taux d'intérêt (% annuel) :</p>
+                <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="pret-emprunt-input">
+            </div>
+
 
             <div class="pret-emprunt-input-wrapper" id="Wrapper_FraisPlateforme">
                 <p class="pret-emprunt-input-label">Frais de plateforme (% annuel) :</p>
