--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
     </div>
 
 
-    <section>
 
-        <!-- 
+    <!-- 
    ##############################################################
    ##                                                          ##
    ##                      Trading                             ##
    ##                                                          ##
    ##############################################################
 -->
+    <section>
+
         <div id="PartieTrading" class="trading-container">
             <section class="left-column-trading-left-column">
                 <div class="trading-heading">
@@ -115,7 +116,7 @@
                             calcul pour obtenir les résultats</button>
                     </div>
                     <div class="trading-button-wrapper">
-                        <button type="button" id="ResetAll" class="trading-button-reset">Reset</button>
+                        <button type="button" id="ResetAll" class="button is-large">Reset</button>
                     </div>
                 </section>
             </section>
