update Affichage.css, Mode.css, index.html and main.js

--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
         <div class="mode-selection">
             <input type="radio" id="Input_Trading" name="Choice" value="Trading" class="mode-radio">
             <label for="Input_Trading" class="mode-label">Trading</label>
-
             <input type="radio" id="Input_Staking" name="Choice" value="Staking" class="mode-radio">
             <label for="Input_Staking" class="mode-label">Staking</label>
-
             <input type="radio" id="Input_NFT" name="Choice" value="NFT" class="mode-radio">
             <label for="Input_NFT" class="mode-label">NFT</label>
-
             <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="mode-radio">
             <label for="Input_Lending" class="mode-label">Lending/Borrowing</label>
         </div>
+        <button class="menu-button">☰ Menu</button>
     </div>
 
 
