update Mode.css, index.html and main.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="mode-radio">
             <label for="Input_Lending" class="mode-label">Lending/Borrowing</label>
         </div>
-        <button class="menu-button">☰ Menu</button>
+        <input type="checkbox" class="menu-button-checkbox" id="menu-button-checkbox">
+        <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
     </div>
 
 
